[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctmatch"
version = "0.3.0"
description = "Clinical trial matching pipeline for the TREC Precision Medicine challenge"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "James Kelly", email = "mrkellyjam@gmail.com" },
]
dependencies = [
    "torch>=2.1",
    "transformers>=4.36",
    "sentence-transformers>=2.2",
    "datasets>=2.14",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "tqdm",
    "evaluate",
    "ctproc>=0.3.0",
]

[project.optional-dependencies]
app = ["gradio>=4.0"]
train = [
    "accelerate>=0.25",
    "trl>=0.7",
    "dspy-ai>=2.4",
    "peft>=0.7",
]
bm25 = ["rank-bm25>=0.2.2"]
claude = ["anthropic>=0.40"]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/semajyllek/ctmatch"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ctmatch*"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
