[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctmatch"
version = "0.3.0"
description = "Clinical trial matching pipeline for the TREC Precision Medicine challenge"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "James Kelly", email = "mrkellyjam@gmail.com" },
]
dependencies = [
    "ctproc @ git+https://github.com/semajyllek/ctproc.git",
    "transformers",
    "sentence-transformers",
    "datasets",
    "scikit-learn",
    "numpy",
    "pandas",
    "tqdm",
    "evaluate",
    "lxml",
]

[project.optional-dependencies]
app = ["gradio>=4.0"]
train = [
    "accelerate>=0.25",
    "trl>=0.7",
    "dspy-ai>=2.4",
    "peft>=0.7",
]
bm25 = ["rank-bm25>=0.2.2"]
claude = ["anthropic>=0.40"]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/semajyllek/ctmatch"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ctmatch*"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
